--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 *{
-    margin:0;
-    padding: 0;
+    margin:0px;
+    padding: 0px;
     box-sizing: border-box;
     background-color: black;
     color:white
+}
+body{
+    overflow-x: hidden;
 }
