--- a/src/styles/main/displayVideo.css
+++ b/src/styles/main/displayVideo.css
@@ -1,12 +1,14 @@
 .show-video{
+
     height: 100%;
-    width: 100%;
+    width: 120%;
+    /* overflow-x: hidden; */
 }
 /* .show-video iframe{
     height: 100vh;
     width: 100%;
 } */
 .show-video video{
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
