--- a/src/styles/sidebar/sidebar.css
+++ b/src/styles/sidebar/sidebar.css
@@ -1,7 +1,20 @@
+.sidebar{
+    margin-top: 20%;
+}
+.sidebar ul{
+    display: flex;
+    flex-direction: column;
+    position:fixed;
+}
 .sidebar ul li{
     list-style-type: none;
+    margin:10% 0
+
 }
 .sidebar ul li a{
    text-decoration: none; 
+   font-size: large;
+   font-weight: bold;
+   color:whitesmoke
 
 }
