movies presented based on genre and language

--- a/src/styles/home/head.css
+++ b/src/styles/home/head.css
@@ -4,11 +4,11 @@
 }
 
 .head .head-img {
-    width: 50vw;;
+    width: 35%;;
     
 }
 .head .head-content {
-    width: 50vw;
+    width: 65%;
 }
 .head .head-content .movie-title img{
     width: 55px;
