--- a/src/styles/home/homepage.css
+++ b/src/styles/home/homepage.css
@@ -1,4 +1,8 @@
-
+*{
+    margin:0px;
+    padding:0px;
+    box-sizing: border-box;
+}
 .homepage{
     display: grid;
     grid-template-columns: 10vw 1fr;
@@ -7,12 +11,13 @@
                           'sidebar footer';
 
     height: 100vh;
+    /* width: 100vw; */
 }
 
 .homepage .head{
     grid-area: head;
     height: 45vh;
-    width: 90vw;
+    width: 100vw;
     
 
 }
@@ -26,7 +31,7 @@
     grid-area: main;
     /* height: 50vh; */
     /* width: 90vw; */
-    width: 90%;
+    width: 100%;
     
 
 }
